Fix action dropdown menu clipping in listview for steps

--- a/source/services/website/content/bootstrap-after.less
+++ b/source/services/website/content/bootstrap-after.less
@@ -45,9 +45,13 @@ textarea.ie-placeholder, input[type="text"].ie-placeholder, input[type="text"].p
 .dashboard-list { padding: 6px; overflow-y: auto; over-flow-x: hidden; }
 .dashboard-list ul { margin: 0; over-flow-x: hidden; }
 .dashboard-list li a {  cursor: pointer; } 
-.dashboard-list .itemlist .dropdown-menu { top: 0; right: 20px; }
 .dashboard-list .itemlist span,  .dashboard-list .itemlist em { padding-left: 21px; } 
 .dashboard-right .dropdown-menu.pull-right { left: auto; right: 0; }
+
+// adjust dropdown menus to not get clipped
+.dashboard-list .itemlist .dropdown-menu { top: 0; right: 20px; }
+.dashboard-center .absolute-right .dropdown.dropup .dropdown-menu { bottom: -38px; right: 20px; }
+.dashboard-center .absolute-right .dropdown.dropcenter .dropdown-menu { top: -110px; right: 20px; }
 
 /* color status icons */
 .dashboard-list li a.st-paused, .dashboard-list li a.st-stopped { color: @navbarSearchPlaceholderColor; }
@@ -99,12 +103,13 @@ textarea.ie-placeholder, input[type="text"].ie-placeholder, input[type="text"].p
 .dashboard-center .manager-folders .tab-content textarea { height: 60px; }
 .dashboard-center .manager-folders .tab-content .input-inline-max { display:inline-block; width: 90%; }
 .dashboard-center .manager-folders .tab-content .nav-list { padding: 0; }
-.dashboard-center .manager-folders .tab-content .nav-list li { border-top: 1px solid @btnBorder; padding: 0 8px 0 8px; }
-.dashboard-center .manager-folders .tab-content .nav-list li.selected { background-color: @grayLighter; }  
-.dashboard-center .manager-folders .tab-content .nav-list li.st-paused { background-color: @warningBackground; }  
+.dashboard-center .manager-folders .tab-content .nav-list > li { border-top: 1px solid @btnBorder; padding: 0 8px 0 8px; }
+.dashboard-center .manager-folders .tab-content .nav-list > li.selected { background-color: @grayLighter; }  
+.dashboard-center .manager-folders .tab-content .nav-list > li.st-paused { background-color: @warningBackground; }  
 .dashboard-center .manager-folders .tab-content .nav-list .btn-toolbar { margin: 8px 2px 2px 2px; }
 .dashboard-center .manager-folders .tab-content .nav-list .btn-toolbar.pull-right { float: right; }
-.btn-toolbar .icon-large { text-align:left; padding: 4px 0 0 8px; }
+.btn-toolbar .icon-large { text-align:left; padding: 4px 0 0 4px;  margin-left: 4px; }
+.btn-toolbar .btn .icon-large { text-align:left; padding: 4px 0 0 8px;  }
 
 .dashboard-center .carousel .input-block-level {
     border-left-color: transparent; border-bottom-color: transparent; border-right-color: transparent; 
